--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,7 +1,14 @@
+@font-face {
+  font-family: 'Squada';
+  src: url('./fonts/SquadaOne-Regular.ttf');
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
+  background-color: black;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +20,13 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.logo-font {
+  font-family: 'Squada';
+  font-size: 80px;
+}
+
+.MuiInputBase-root {
+  background-color: white;
 }
