--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -32,5 +32,9 @@ a {
 }
 
 .modal-backdrop {
-  background-color: #3B3B3B00;
+  background-color: #3B3B3BA3;
+}
+
+.Mui-disabled {
+  color: rgba(168, 168, 168, 0.53);
 }
